Acertando titulo de fase + incluindo botao reset

--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-info" (click)="limpaSelecoes()">Resetar tabelas</button>
 <div class="grupos">
     <div class="tabelas-titulo">
         <h3>Grupo A</h3>
